--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,19 +11,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">All Posts</a>
+        <a class="nav-link" href="/allposts">All Posts</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link" href="#">Following</a>
+        <a class="nav-link" href="/following">Following</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Favorites</a>
+        <a class="nav-link" href="/favorites">Favorites</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">My Posts</a>
+        <a class="nav-link" href="/MyPosts">My Posts</a>
       </li>
     </ul>
     <!-- <form class="form-inline my-2 my-lg-0"> -->
